--- a/src/App.css
+++ b/src/App.css
@@ -225,6 +225,6 @@ ul{
 }
 
 .projectSegments{
-  background: #385e94;
-  border: 1px solid white;
+  background: #385e94 !important;
+  border: 1px solid white !important;
 }
