newsletter divider and header modification

--- a/src/App.css
+++ b/src/App.css
@@ -226,5 +226,5 @@ ul{
 
 .projectSegments{
   background: #385e94 !important;
-  border: 1px solid white !important;
+  border: 1px solid #7e9fce !important;
 }
