--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ a{
   font-weight: bold;
   border-bottom: 3px solid 	#7e9fce;
   padding-bottom: 1px;
-  color:#7e9fce;
+  color:white;
 }
 
 a:hover{
