--- a/src/App.css
+++ b/src/App.css
@@ -198,7 +198,7 @@ ul{
 .aTagStyleBlocker{
   border: none;
   padding-bottom: none;
-  color: #7e9fce;
+  color: white;
 }
 
 .aTagStyleBlocker:hover{
@@ -226,6 +226,6 @@ ul{
 
 .projectSegments{
   background: #385e94 !important;
-  border: 1px solid #7e9fce !important;
+  border: 2px solid #7e9fce !important;
   margin-bottom: 10% !important; 
 }
