--- a/src/App.css
+++ b/src/App.css
@@ -229,3 +229,6 @@ ul{
   border: 2px solid #7e9fce !important;
   margin-bottom: 10% !important; 
 }
+.activeLink{
+  border-bottom: 3px solid 	#fee18b;
+}
