--- a/src/App.css
+++ b/src/App.css
@@ -234,8 +234,8 @@ ul{
 }
 
 .underlineLinkText{
-  font-size: 1rem;
-  display: inline;
+  font-size: 1.2rem;
+  display: inlie;
   border-bottom: 3px solid 	#7e9fce ;
   padding-bottom: 1px ;
 }
