--- a/src/App.css
+++ b/src/App.css
@@ -95,10 +95,11 @@ ul{
   align-self: center;
   padding-top: 3%;
 }
-
+@media only screen and (min-width: 768px){
 #centerCol{
   padding-left: 10%;
   padding-right: 10%;
+}
 }
 
 #listRow{
