--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+#page{
+  overflow: hidden;
+}
+
 .mainSection{
   background: #385e94
 }
@@ -7,6 +11,7 @@ body{
     "helvetica","ubuntu","roboto","noto","segoe ui","arial",sans-serif;
   background: #385e94;
   color: white;
+  overflow: hidden;
 }
 
 a{
@@ -265,12 +270,12 @@ ul{
   border-bottom: 3px solid 	#fee18b; 
 }
 
-/* @media only screen and (max-width: 768px){
+@media only screen and (max-width: 768px){
   #socialGrid{
     padding-left: 4%;
     padding-right: 4%;
   }
-} */
+}
 
 #socialList{
   /* padding-left: 6.5%; */
