--- a/src/App.css
+++ b/src/App.css
@@ -10,12 +10,90 @@ body{
   overflow-x: hidden;
 }
 
-@media only screen  and (max-width: 768px){
+/* Small mobile sizes*/
+
+@media (max-width: 375px){
   body{
     max-width: 340px;
     padding-left: 5.5%;
   }
 }
+
+@media (max-width:375px){
+  #articleListMainGrid{
+    margin-left: -5.5%;
+    margin-right: -5.5%;
+    justify-items: center;
+}
+}
+
+@media only screen and (max-width: 375px){
+  #listRow{
+    margin-left: 0%;
+    display: flex;
+    justify-content: flex-start;
+  }
+}
+
+/* Large mobile sizes*/
+
+@media  (max-width: 425px){
+  body{
+    max-width: 380px;
+    padding-left: 10%;
+  }
+}
+
+
+@media (max-width:425px){
+  #articleListMainGrid{
+    margin-left: -5.5%;
+    margin-right: -5.5%;
+    justify-items: center;
+}
+}
+
+@media only screen and (max-width: 425px){
+  #listRow{
+    margin-left: 0%;
+    display: flex;
+    justify-content: flex-start;
+  }
+}
+
+/* Tablet Sizes*/
+
+@media (max-width: 768px){
+  body{
+    max-width: 690px;
+    padding-left: 4%;
+  }
+}
+
+@media (max-width:768px){
+  #articleListMainGrid{
+    margin-left: -5.5%;
+    margin-right: -5.5%;
+    justify-items: center;
+}
+}
+
+@media only screen and (max-width: 768px){
+  #listRow{
+    margin-left: 0%;
+    display: flex;
+    justify-content: flex-start;
+  }
+}
+
+@media only screen and (max-width: 768px){
+  .leftHeaderColText{
+    margin-left: 0%;
+    margin-top: 0%;
+  }
+}
+
+/* Laptop sizes*/
 
 a{
   display: inline;
@@ -73,12 +151,7 @@ ul{
   }
 }
 
-@media only screen and (max-width: 768px){
-  .leftHeaderColText{
-    margin-left: 30%;
-    margin-top: 0%;
-  }
-}
+
 
 
 .rightHeaderCol{
@@ -128,14 +201,6 @@ ul{
   }
 }
 
-@media only screen and (max-width: 768px){
-  #listRow{
-    margin-left: 4%;
-    display: flex;
-    justify-content: flex-start;
-  }
-}
-
 #aboutText{
   font-size: large;
   font-weight: 100;
@@ -152,14 +217,6 @@ ul{
 #articleListMainGrid{
   padding-top: 2%;
   justify-items: center;
-}
-
-@media only screen and (max-width:768px){
-  #articleListMainGrid{
-    margin-left: -5.5%;
-    margin-right: -5.5%;
-    justify-items: center;
-}
 }
 
 #projectContent{
