--- a/src/App.css
+++ b/src/App.css
@@ -409,3 +409,8 @@ div.articleContent > div > img{
   padding-top: 2%;
   padding-bottom: 2%;
 }  
+
+#twitterPromptDiv{
+  padding-bottom: 0;
+  margin: 0;
+}
