--- a/src/App.css
+++ b/src/App.css
@@ -191,7 +191,7 @@ ul{
 }
 
 .contentTitle{
-  margin-top: 1%;
+  /* margin-top: 1%; */
   padding-bottom: 1%;
   font-size: 3rem;
   font-weight: bolder;
