article padding modification

--- a/src/App.css
+++ b/src/App.css
@@ -400,9 +400,9 @@ ul{
   margin-top: -10%;
 }
 
-/* #articleImg{
+#articleImg{
   margin-top: 6%;
-} */
+}
 
 div.articleContent > div > img{
   padding-top: 2%;
