--- a/src/App.css
+++ b/src/App.css
@@ -1,418 +1,450 @@
-.mainSection{
-  background: #385e94
+.mainSection {
+	background: #385e94;
 }
 /* Force scrollbar in order to make all pages the same */
 
-body{
-  font-family: -apple-system, BlinkMacSystemFont , "avenir next","avenir","helvetica neue",
-    "helvetica","ubuntu","roboto","noto","segoe ui","arial",sans-serif;
-  background: #385e94;
-  color: white;
-  overflow-x: hidden;
+body {
+	font-family: -apple-system, BlinkMacSystemFont, "avenir next", "avenir",
+		"helvetica neue", "helvetica", "ubuntu", "roboto", "noto", "segoe ui",
+		"arial", sans-serif;
+	background: #385e94;
+	color: white;
+	overflow-x: hidden;
 }
 
 /* Small mobile sizes*/
 
-@media (max-width: 375px){
-  body{
-    max-width: 340px;
-    padding-left: 5.5%;
-  }
+@media (max-width: 375px) {
+	body {
+		max-width: 340px;
+		padding-left: 5.5%;
+	}
 }
 
-@media (max-width:375px){
-  #articleListMainGrid{
-    margin-left: -5.5%;
-    margin-right: -5.5%;
-    justify-items: center;
-  }
+@media (max-width: 375px) {
+	#articleListMainGrid {
+		margin-left: -5.5%;
+		margin-right: -5.5%;
+		justify-items: center;
+	}
 }
 
-@media only screen and (max-width: 375px){
-  #listRow{
-    margin-left: 0%;
-    display: flex;
-    justify-content: flex-start;
-  }
+@media only screen and (max-width: 375px) {
+	#listRow {
+		margin-left: 0%;
+		display: flex;
+		justify-content: flex-start;
+	}
 }
-@media only screen and (max-width: 375px){
-  div.articleContent > div > img{
-    max-width: 315px;
-  }
+@media only screen and (max-width: 375px) {
+	div.articleContent > div > img {
+		max-width: 315px;
+	}
 }
 
 /* Large mobile sizes*/
 
-@media  (max-width: 425px){
-  body{
-    max-width: 380px;
-    padding-left: 10%;
-  }
+@media (max-width: 425px) {
+	body {
+		max-width: 380px;
+		padding-left: 10%;
+	}
 }
 
-
-@media (max-width:425px){
-  #articleListMainGrid{
-    margin-left: -5.5%;
-    margin-right: -5.5%;
-    justify-items: center;
-}
-}
-
-@media only screen and (max-width: 425px){
-  #listRow{
-    margin-left: 0%;
-    display: flex;
-    justify-content: flex-start;
-  }
+@media (max-width: 425px) {
+	#articleListMainGrid {
+		margin-left: -5.5%;
+		margin-right: -5.5%;
+		justify-items: center;
+	}
 }
 
-@media only screen and (max-width: 425px){
-  div.articleContent > div > img{
-    max-width: 300px;
-    margin-right: -5.5%;
-  }
+@media only screen and (max-width: 425px) {
+	#listRow {
+		margin-left: 0%;
+		display: flex;
+		justify-content: flex-start;
+	}
+}
+
+@media only screen and (max-width: 425px) {
+	div.articleContent > div > img {
+		max-width: 300px;
+		margin-right: -5.5%;
+	}
 }
 
 /* Tablet Sizes*/
 
-@media (max-width: 768px){
-  body{
-    max-width: 340px;
-    padding-left: 4%;
-    padding-right: 0%;
-  }
+/* @media only  (min-width: 425px) and (max-width: 769px) {
+	body {
+		max-width: 340px;
+		padding-left: 4%;
+		padding-right: 0%;
+	}
 }
 
-@media (max-width:768px){
-  #articleListMainGrid{
-    margin-left: -4%;
-    margin-right: -8%;
-    justify-items: center;
-}
-}
-
-@media only screen and (max-width: 768px){
-  #listRow{
-    margin-left: 4%;
-    display: flex;
-    justify-content: flex-start;
-  }
+@media only screen and (max-width: 768px) {
+	#articleListMainGrid {
+		margin-left: -4%;
+		margin-right: -8%;
+		justify-items: center;
+	}
 }
 
-@media only screen and (max-width: 768px){
-  .leftHeaderColText{
-    margin-left: 30%;
-    margin-top: 0%;
-  }
+@media only screen and (max-width: 768px) {
+	#listRow {
+		margin-left: 4%;
+		display: flex;
+		justify-content: flex-start;
+	}
 }
 
-@media only screen and (max-width: 768px){
-  div.articleContent > div > img{
-    max-width: 300px;
-    margin-right: -8%;
-  }
+@media only screen and (max-width: 768px) {
+	.leftHeaderColText {
+		margin-left: 30%;
+		margin-top: 0%;
+	}
 }
 
-@media only screen and (max-width:768px){
-  #toTopButton{
-    font-size: small;
-    float: right;
-  }
+@media only screen and (max-width: 768px) {
+	div.articleContent > div > img {
+		max-width: 300px;
+		margin-right: -8%;
+	}
 }
 
-@media only screen and (max-width: 768px){
-  #socialGrid{
-    padding-left: 4%;
-    padding-right: 4%;
-  }
+@media only screen and (max-width: 768px) {
+	#toTopButton {
+		font-size: small;
+		float: right;
+	}
 }
+
+@media only screen and (max-width: 768px) {
+	#socialGrid {
+		padding-left: 4%;
+		padding-right: 4%;
+	}
+} */
 
 /* Laptop+ Sizes */
 
-@media only screen and (min-width: 768px){
-  div.articleContent > div > img{
-    max-width: 100%;
-  }
+@media only screen and (min-width: 768px) {
+	div.articleContent > div > img {
+		max-width: 100%;
+	}
 }
 
-@media only screen and (min-width: 768px){
-  .leftHeaderColText{
-    margin-left: 55%;
-    margin-top: 0%;
-  }
+@media only screen and (min-width: 768px) {
+	.leftHeaderColText {
+		margin-left: 55%;
+		margin-top: 0%;
+	}
 }
 
-a{
-  display: inline;
-  font-weight: bold;
-  border-bottom: 3px solid 	#7e9fce;
-  padding-bottom: 1px;
-  color:white;
+a {
+	display: inline;
+	font-weight: bold;
+	border-bottom: 3px solid #7e9fce;
+	padding-bottom: 1px;
+	color: white;
 }
 
-a:hover{
-  border-bottom: 3px solid 	#fee18b; 
-  color:white;
+a:hover {
+	border-bottom: 3px solid #fee18b;
+	color: white;
 }
 
-i{
-  color: 	#7e9fce; 
+i {
+	color: #7e9fce;
 }
-i:hover{
-  color: white;
-}
-
-.underlineHeaderText{
-  display: inline;
-  border-bottom: 3px solid 	#7e9fce ;
-  padding-bottom: 1px ;
+i:hover {
+	color: white;
 }
 
-.underlineHeaderText:hover{
-  border-bottom: 3px solid 	#fee18b; 
+.underlineHeaderText {
+	display: inline;
+	border-bottom: 3px solid #7e9fce;
+	padding-bottom: 1px;
 }
 
-#dateText{
-  font-size: smaller;
-  color: 	#7e9fce;
-  padding-top: 1%;
+.underlineHeaderText:hover {
+	border-bottom: 3px solid #fee18b;
 }
 
-#leadText{
-  font-size: medium;
-  margin-top: -1%;
+#dateText {
+	font-size: smaller;
+	color: #7e9fce;
+	padding-top: 1%;
 }
 
-ul{
-  padding: 0%
+#leadText {
+	font-size: medium;
+	margin-top: -1%;
 }
 
-#headerRow{
-  height: 100px;
+ul {
+	padding: 0%;
 }
 
-.rightHeaderCol{
-  margin-top: 3.4%;
+#headerRow {
+	height: 100px;
 }
 
-.articleContent{
-  font-size: large;
-  line-height: 2.5rem;
-  padding-bottom: 5%;
+.rightHeaderCol {
+	margin-top: 3.4%;
 }
 
-.contentTitle{
-  padding-bottom: 1%;
-  font-size: 3rem;
-  font-weight: bolder;
+.articleContent {
+	font-size: large;
+	line-height: 2.5rem;
+	padding-bottom: 5%;
 }
 
-.contentDate{
-  padding-bottom: 1%;
-  color:#7e9fce;
-  font-weight: bold;
-  font-size: medium; 
+.contentTitle {
+	padding-bottom: 1%;
+	font-size: 3rem;
+	font-weight: bolder;
 }
 
-#articleListGrid{
-  padding-top: 3%;
+.contentDate {
+	padding-bottom: 1%;
+	color: #7e9fce;
+	font-weight: bold;
+	font-size: medium;
 }
 
-#mainGrid{
-  align-self: center;
-  padding-top: 3%;
+#articleListGrid {
+	padding-top: 3%;
+}
+
+#mainGrid {
+	align-self: center;
+	padding-top: 3%;
 }
 
 /* Force scrollbar on root page on devices larger than tablets */
-@media only screen and (min-width: 768px){
-  .mainSection{
-    overflow-x: hidden;
-    overflow-y: scroll;
-  }
+@media only screen and (min-width: 768px) {
+	.mainSection {
+		overflow-x: hidden;
+		overflow-y: scroll;
+	}
 }
 
-@media only screen and (min-width: 768px){
-  #centerCol{
-    padding-left: 10%;
-    padding-right: 10%;
-  }
+@media only screen and (min-width: 768px) {
+	#centerCol {
+		padding-left: 10%;
+		padding-right: 10%;
+	}
 }
 
-@media only screen and (min-width: 768px){
-  #listRow{
-    margin-left: 6.5%;
-    display: flex;
-    justify-content: flex-start;
-  }
+@media only screen and (min-width: 768px) {
+	#listRow {
+		margin-left: 6.5%;
+		display: flex;
+		justify-content: flex-start;
+	}
 }
 
-#aboutText{
-  font-size: large;
-  font-weight: 100;
+#aboutText {
+	font-size: large;
+	font-weight: 100;
 }
 
-#aboutImg{
-  margin-top: 6%;
+#aboutImg {
+	margin-top: 6%;
 }
 
-#articleList{
-  margin-bottom: 2%;
+#articleList {
+	margin-bottom: 2%;
 }
 
-#articleListMainGrid{
-  padding-top: 2%;
-  justify-items: center;
+#articleListMainGrid {
+	padding-top: 2%;
+	justify-items: center;
 }
 
-#projectContent{
-  padding-top: 5%;
+#projectContent {
+	padding-top: 5%;
 }
 
-.projectPadding{
-  margin-top: 4%;
+.projectPadding {
+	margin-top: 4%;
 }
 
-.projectPaddingBottom{
-  padding-bottom: 20%;
+.projectPaddingBottom {
+	padding-bottom: 20%;
 }
 
-#toTopButton{
-  font-size: medium;
-  float: right;
+#toTopButton {
+	font-size: medium;
+	float: right;
 }
 
-#formField{
+#formField {
+	color: white;
+	font-size: medium;
+}
+
+#formButton {
+	border: 1px solid white;
+	background: #385e94;
+	color: white;
+}
+
+#formButton:hover {
+	border: 1px solid #fee18b;
+}
+
+#subscribeHeader {
+	padding-bottom: 2%;
+	padding-top: 3%;
+}
+
+#newsletterHeader {
+	padding-top: 3%;
+}
+
+#MERGE0 {
+	background: #385e94;
+	border: 1px solid white;
+	color: white;
+}
+#MERGE0:focus {
+	background: white;
+	color: black;
+	border: 1px solid #fee18b;
+}
+
+#MERGE0:hover {
+	border: 1px solid #fee18b;
+}
+
+#MERGE1 {
+	background: #385e94;
+	border: 1px solid white;
+	color: white;
+}
+
+#MERGE1:focus {
+	background: white;
+	color: black;
+	border: 1px solid #fee18b;
+}
+
+#MERGE1:hover {
+	border: 1px solid #fee18b;
+}
+
+.aTagStyleBlocker {
+	border: none;
+	padding-bottom: none;
+	color: white;
+}
+
+.aTagStyleBlocker:hover {
+	color: white;
+	border: none;
+}
+
+#hiddenDirTag {
+	display: none;
+}
+
+#disqusEmbed {
+	margin-top: 5%;
+	margin-bottom: 5%;
+}
+
+#socialEmbed {
+	margin-top: 5%;
+	margin-bottom: 5%;
+}
+
+#newsletterEmbed {
+	margin-bottom: 10%;
+}
+
+.projectSegments {
+	background: #385e94 !important;
+	border: 2px solid #7e9fce !important;
+	margin-bottom: 10% !important;
+}
+.activeLink {
+	border-bottom: 3px solid #fee18b !important;
+}
+
+.underlineLinkText {
+	font-size: 1.3rem;
+	display: inline;
+	border-bottom: 3px solid #7e9fce;
+	padding-bottom: 1px;
+}
+
+.underlineLinkText:hover {
+	border-bottom: 3px solid #fee18b;
+}
+
+#socialList {
+	display: flex;
+	float: left;
+}
+
+#socialDivider {
+	margin-top: 7%;
+}
+
+#socialGrid {
+	margin-top: -10%;
+}
+
+#withImageArticleImage {
+	margin-top: 6%;
+}
+
+div.articleContent > div > img {
+	padding-top: 2%;
+	padding-bottom: 2%;
+}
+
+#twitterPromptDiv {
+	padding-bottom: 0;
+	margin: 0;
+}
+
+.articleDetailContent {
+	padding-top: 5%;
+}
+
+#bookshelfContent {
+	padding-top: 4%;
+}
+
+.yellow_text {
+	color: #fee18b !important;
+  font-weight: bold;
+  text-decoration-color: #fee18b !important;
+}
+
+.lightblue_text {
+	color: #7e9fce !important;
+  font-weight: bold;
+  text-decoration-color: #7e9fce !important;
+}
+
+.book_a_tag {
+	text-decoration: underline !important;
   color: white;
   font-size: medium;
 }
 
-#formButton{
-  border: 1px solid white;
-  background: #385e94;
-  color: white;
+.book_a_tag:hover {
+  border-bottom: 0px !important;
+  font-size: medium;
 }
 
-#formButton:hover{
-  border: 1px solid #fee18b; 
-}
-
-#subscribeHeader{
-  padding-bottom: 2%;
-  padding-top: 3%;
-}
-
-#newsletterHeader{
-  padding-top: 3%;
-}
-
-#MERGE0{
-  background: #385e94;
-  border: 1px solid white;
-  color: white; 
-}
-#MERGE0:focus{
-  background: white;
-  color: black;
-  border: 1px solid #fee18b;
-}
-
-#MERGE0:hover{
-  border: 1px solid #fee18b;
-}
-
-#MERGE1{
-  background: #385e94;
-  border: 1px solid white;
-  color: white;
-}
-
-#MERGE1:focus{
-  background: white;
-  color: black;
-  border: 1px solid #fee18b;
-}
-
-#MERGE1:hover{
-  border: 1px solid #fee18b;
-}
-
-.aTagStyleBlocker{
-  border: none;
-  padding-bottom: none;
-  color: white;
-}
-
-.aTagStyleBlocker:hover{
-  color: white;
-  border:none;
-}
-
-#hiddenDirTag{
-  display: none;
-}
-
-#disqusEmbed{
-  margin-top: 5%;
-  margin-bottom: 5%;
-}
-
-#socialEmbed{
-  margin-top: 5%;
-  margin-bottom: 5%;
-}
-
-#newsletterEmbed{
-  margin-bottom: 10%;
-}
-
-.projectSegments{
-  background: #385e94 !important;
-  border: 2px solid #7e9fce !important;
-  margin-bottom: 10% !important; 
-}
-.activeLink{
-  border-bottom: 3px solid 	#fee18b !important;
-}
-
-.underlineLinkText{
-  font-size: 1.3rem;
-  display: inline;
-  border-bottom: 3px solid 	#7e9fce ;
-  padding-bottom: 1px ;
-}
-
-.underlineLinkText:hover{
-  border-bottom: 3px solid 	#fee18b; 
-}
-
-#socialList{
-  display:flex;
-  float: left;
-}
-
-#socialDivider{
-  margin-top: 7%;
-}
-
-#socialGrid{
-  margin-top: -10%;
-}
-
-#withImageArticleImage{
-  margin-top: 6%;
-}
-
-div.articleContent > div > img{
-  padding-top: 2%;
-  padding-bottom: 2%;
-}  
-
-#twitterPromptDiv{
-  padding-bottom: 0;
-  margin: 0;
-}
-
-.articleDetailContent{
-  padding-top: 5%
+#book_title_div {
+	margin-top: 2% !important;
+	margin-bottom: 3% !important;
 }
