--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,19 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont , "avenir next","avenir","helvetica neue",
-    "helvetica","ubuntu","roboto","noto","segoe ui","arial",sans-serif;
+	margin: 0;
+	padding: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'avenir next', 'avenir',
+		'helvetica neue', 'helvetica', 'ubuntu', 'roboto', 'noto', 'segoe ui',
+		'arial', sans-serif;
 
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: #385e94;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	/* background: #385e94; */
+	background: white;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-    background: #385e94;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
+	/* background: #385e94; */
+	background: white;
 }
