--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,16 @@ body {
   overflow-y: scroll;
 }
 
+a {
+  font-weight: bold;
+  color: #385e94;
+}
+
+a:hover {
+  color: #253a57;
+  border-bottom: 1px solid #253a57;
+}
+
 .btn {
   background-color: #385e94 !important;
   color: white !important;
@@ -26,16 +36,6 @@ ul {
 
 li {
   margin-top: 2%;
-}
-
-.link-underline {
-  font-weight: bold;
-  color: #385e94;
-}
-
-.link-underline:hover {
-  color: #253a57;
-  border-bottom: 1px solid #253a57;
 }
 #navlinks > li > a {
   font-weight: 600 !important;
@@ -82,14 +82,6 @@ li {
   padding-left: 0.5% !important;
 }
 
-#content-col {
-  min-width: 1333.15px;
-}
-
-#sidebar-col {
-  min-width: 205.1px;
-}
-
 .content-date {
   font-weight: 500;
   color: #999;
@@ -102,51 +94,155 @@ li {
   margin-bottom: 2%;
 }
 
+.post-header {
+  font-size: 1.8em;
+}
+
+.twitter-btn {
+  margin-top: 2%;
+  text-align: center;
+  margin-bottom: 2%;
+}
+
+.tag-section {
+  margin-top: 1%;
+}
+
+.footer-section {
+  margin-top: 1%;
+  margin-bottom: 2%;
+}
+
+.ui.pagination.menu > a {
+  border: none;
+}
+
 /* Mobile Breakpoints */
-@media only screen and (min-width: 992px) {
-  #main-section {
-    margin-left: 15vw;
-    margin-right: 15vw;
-    background-color: red;
-  }
-}
-
-/* Tablet Breakpoints */
-@media only screen and (min-width: 992px) {
-  #main-section {
-    margin-left: 15vw;
-    margin-right: 15vw;
-    background-color: red;
-  }
-}
-
-/* Laptop Breakpoints */
-@media only screen and (min-width: 992px) {
-  #main-section {
-    margin-left: 15vw;
-    margin-right: 15vw;
-    background-color: blue;
-  }
-}
-
-/* Wide (Monitor) Breakpoints */
-@media only screen and (min-width: 1200px) {
+@media only screen and (max-width: 599px) {
   body {
-    padding-top: 2%;
+    padding-top: 5%;
+    padding-left: 1%;
+    padding-right: 1%;
   }
 
   #main-section {
-    margin-left: 8%;
-    margin-right: 8%;
     background-color: white;
   }
 
   #sidebar-col {
-    /* margin-left: 4vw; */
+    min-width: initial;
   }
 
   #content-col {
-    margin-left: 5%;
-    /* border: 1px solid red; */
+    max-width: initial;
+  }
+
+  .categories > li {
+    margin-top: 5%;
+  }
+
+  #categories-header {
+    font-size: 0.9em;
+  }
+
+  .post-header {
+    font-size: 1.5em;
+  }
+
+  .twitter-btn {
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+}
+
+/* Tablet Portrait */
+@media only screen and (min-width: 600px) {
+  body {
+    padding-top: 3%;
+  }
+
+  #main-section {
+    padding-left: 3%;
+    background-color: white;
+  }
+
+  #sidebar-col {
+    min-width: 150px;
+  }
+
+  #content-col {
+    padding-left: 5%;
+    padding-right: 5%;
+    max-width: 600px;
+  }
+
+  .categories > li {
+    margin-top: 10%;
+  }
+}
+
+/* Tablet Landscape */
+@media only screen and (min-width: 900px) {
+  body {
+    padding-top: 5%;
+  }
+
+  #main-section {
+    padding-left: 5%;
+    background-color: white;
+  }
+
+  #sidebar-col {
+    min-width: 150px;
+  }
+
+  #content-col {
+    padding-left: 8%;
+    padding-right: 5%;
+    max-width: initial;
+  }
+}
+
+/* Monitors */
+@media only screen and (min-width: 1200px) {
+  body {
+    padding-top: 4%;
+  }
+
+  #main-section {
+    padding-left: 10%;
+    background-color: white;
+  }
+
+  #sidebar-col {
+    min-width: initial;
+  }
+
+  #content-col {
+    padding-left: 8%;
+    padding-right: 12%;
+    max-width: initial;
+  }
+}
+
+/* Monitors (Wide) */
+@media only screen and (min-width: 1800px) {
+  body {
+    padding-top: 3%;
+  }
+
+  #main-section {
+    padding-left: 19%;
+    background-color: white;
+  }
+
+  #sidebar-col {
+    min-width: initial;
+  }
+
+  #content-col {
+    padding-left: 5%;
+    padding-right: 25%;
+    max-width: initial;
   }
 }
