--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,48 @@ li {
   border: none;
 }
 
+h2:first-child{
+  margin-top: calc(2rem - 0.142857em);
+  margin-right: 0px;
+  margin-bottom: 1rem;
+  margin-left: 0px;
+}
+
+h2:last-child{
+  margin-top: calc(2rem - 0.142857em);
+  margin-right: 0px;
+  margin-bottom: 1rem;
+  margin-left: 0px;  
+}
+
+h3:first-child{
+  margin-top: calc(2rem - 0.142857em);
+  margin-right: 0px;
+  margin-bottom: 1rem;
+  margin-left: 0px;
+}
+
+h3:last-child{
+  margin-top: calc(2rem - 0.142857em);
+  margin-right: 0px;
+  margin-bottom: 1rem;
+  margin-left: 0px; 
+}
+
+h4:first-child{
+  margin-top: calc(2rem - 0.142857em);
+  margin-right: 0px;
+  margin-bottom: 1rem;
+  margin-left: 0px;
+}
+
+h4:last-child{
+  margin-top: calc(2rem - 0.142857em);
+  margin-right: 0px;
+  margin-bottom: 1rem;
+  margin-left: 0px;  
+}
+
 /* Mobile Breakpoints */
 @media only screen and (max-width: 599px) {
   body {
